--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         });
 
         // Инициализация AdsGram (замените 'your-block-id' на ваш blockId)
-        const AdController = window.Adsgram.init({ blockId: 'your-block-id' });
+        const AdController = window.Adsgram.init({ blockId: '9003' });
 
         let points = 0;
         let tonBalance = 0;
